ajout nouvelle photo pour projet

--- a/projet_session/projet.Rmd
+++ b/projet_session/projet.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Ce qui distingue les communautés autochtones du Québec à celles des autres provinces: la participation aux élections fédérales de 2004 à 2011"
+title: "Plus c'est mieux ? : la relation entre la proportion d'électeurs autochtone dans une circonscriptions et la participation électorale de ces derniers aux élections fédérales de 2021"
 author: "William Beaudry"
 output: html_document
 date: "2024-11-16"
@@ -29,6 +29,8 @@ La question de recherche que nous nous posons alors est la suivante: *quelle est
 Pour produire cet état du savoir, nous avons eu recours à trois outils numériques de recherche. D'abord, nous avons entré notre question de recherche dans *Perplexity.ai* afin qu'il retravaille la question dans des termes optimaux pour produire une question pour le logiciel *Elicit*. Notre question de recherche « Comment expliquer la faible participation aux élections fédérales dans les Premières Nations du Québec comparativement à celles des autres provinces entre 2004 et 2011 ? » a été traduite ainsi « What factors explain the lower voter turnout in First Nations communities in Quebec compared to other Canadian provinces in federal elections between 2004 and 2021 ? » pour faire une requête dans *Elicit*.
 
 Une fois la requête envoyé dans *Elicit*, nous avons sélectionnés les 16 premiers articles proposés. Ceux-ci étaient filtré en fonction de leur pertinence à répondre à la question de recherche et en fonction de la date. La période pour laquelle était choisi des textes étaient de 2004 à aujourd'hui.
+
+En cours de route, la question de recherche a été changée en fonction de la disponibilité des données. Cela dit, les articles sélectionnées dans un premier temps permettaient de répondre à cette nouvelle question de recherche. Nous avons donc utilisé les mêmes articles.
 
 # Méthodes et données
 ## Méthodologie
@@ -90,7 +92,7 @@ Les données sont issues de 2021, ce qui pourrait potentiellement introduire un 
 
 # Résultats
 ## Visualisation
-Nous avons fait le choix de faire deux visualisation avec les données que nous avons extraites. La première visualisation est un graphique à ligne brisée pour montrer les tendances propres aux communautés de chaque provinces. Le second graphique est un diagramme en points. Il permet d'observer la différence importante de participation entre les communautés autochtones du Québec et celle des autres provinces canadiennes. Le code que nous avons roulé pour produire ces graphiques sont les suivants:
+Nous avons fait le choix de faire deux visualisation avec les données que nous avons extraites. La première visualisation est un graphique à ligne brisée pour montrer les tendances propres aux communautés de chaque provinces. Le second graphique est un diagramme en points. Il permet d'observer la différence importante de participation entre les communautés autochtones du Québec et les autres provinces canadiennes. Le code que nous avons roulé pour produire ces graphiques sont les suivants:
 
 **Préparer les données**
 df_long <- df_cln %>%
@@ -195,7 +197,7 @@ Quant à l'hypothèse 2, elle est également infirmée par nos résultats. Nous 
 
 En somme, une différence entre le taux de participation ne peut être attribué à la taille, et son corrolaire la proportion d'électeurs autochtones, pour expliquer le taux de participation des électeurs autochtones du Québec et du reste du Canada.
 
-Pour aller plus loin, une analyse qui souhaiterait mobiliser la taille des circonscriptions devrait inclure les variables sociodémographiques puisqu'une proportion plus élevée d'électeurs autochtones dans une circonscription sont souvent en région éloignée où les caractéristiques socioéconomiques sont différentes.
+Pour aller plus loin, une analyse qui souhaiterait mobiliser la taille des circonscriptions devrait inclure les variables sociodémographiques puisque les circonscription qui ont proportion plus élevée d'électeurs autochtones se situent généralement en région éloignée. L'accès à l'information, la couverture médiatique des campagnes électorales ou encore le profil sociodémographiques des électeurs se distinguent généralement des circonscriptions métropolitaines.
 
 # Bibliographie
 Armstrong, D. A., Alcantara, C., & Kennedy, J. (2023a). Exploring the effects of electorate size on indigenous voter turnout. Politics, Groups, and Identities, 11(1), 98‑107. https://doi.org/10.1080/21565503.2021.1926297
