--- a/projet_session/projet.Rmd
+++ b/projet_session/projet.Rmd
@@ -33,7 +33,9 @@ Une fois la requête envoyé dans *Elicit*, nous avons sélectionnés les 16 pre
 En cours de route, la question de recherche a été changée en fonction de la disponibilité des données. Cela dit, les articles sélectionnées dans un premier temps permettaient de répondre à cette nouvelle question de recherche. Nous avons donc utilisé les mêmes articles.
 
 # Méthodes et données
-## Méthodologie
+## Méthodes
+Nous avons procédé à une régression linéaire simple où Y est le taux de participation des électeurs s'identifiant autochtone, X est la proportion d'électeurs autochtones dans la circonscription et β1 est le coefficient de régression.
+
 ## Extraction des données
 Pour extraire nos données, nous avons utilisé le *package \rvest*. En grande partie, le processus de création du code R a été un long échange entre la fonctionnalité *R Wizard* de ChatGPT et l'IA *Perplexity.ai*. Le code que nous avons roulé pour extraire les données est le suivant:
 
@@ -190,7 +192,11 @@ ggplot(df, aes(x = prop_indigenous, y = TAUX_PARTICIPATION, color = PROV)) +
 
 Ces codes ont été utilisés pour trouver et illustrer le coefficient de corrélation entre la proportion d'électeurs autochtones dans les circonscriptions fédérales et le taux de participation de ces électeurs en 2021. Nous avons fait un coefficient pour l'ensemble des circonscriptions, puis elles ont été regroupées selon la province, puis divisé entre le Québec et les reste du Canada.
 
-# Discussion
+Les résultats illustrent d'abord que la participation aux élections fédérales dans les communautés autochtones dans la province de Québec entre 2004 et 2011 est plus faible que celles dans les autres provinces et territoires. En moyenne, l'écart est de 33,6 points d'écart avec la moyenne du reste du Canada.
+
+Pour ce qui est de la participation aux élections de 2021, la corrélation entre la proportion d'électeurs autochtones dans une circonscription et la participation électorale n'est pas plus négative au Québec que dans d'autres provinces. Le coefficient de corrélation est de -0,235 au Québec tandis qu'ils est plus négatif en Ontario (-0,296), en Nouvelle-Écosse (-,370), au Manitoba (-0,433) et en Saskatchewan (-0,645).
+
+# Conclusion et discussion
 D'après les données que nous avons utilisées, nos hypothèses sont infirmées. Le coefficient de corrélation, bien que faible, montre que la relation entre la taille de la circonscription est au mieux associée à un faible effet négatif sur la participation électorale, sinon une corrélation nulle. Cette conclusion vient à l'encontre de la théorie du choix rationnel que nous testions avec l'hypothèse 1.
 
 Quant à l'hypothèse 2, elle est également infirmée par nos résultats. Nous nous attendions à observer une relation positive entre nos deux variables dans toutes les provinces, mais plus faibles au Québec. Or, au Québec, elle est négative comme dans plusieurs autres provinces, mais elle est plus faible que plusieurs autres provinces. Ainsi, la relation entre le taux de participation et la proportion d'électeurs autochtones est plus faible que dans plusieurs autres provinces, ce à quoi nous ne nous attendions pas.
@@ -198,6 +204,9 @@ Quant à l'hypothèse 2, elle est également infirmée par nos résultats. Nous 
 En somme, une différence entre le taux de participation ne peut être attribué à la taille, et son corrolaire la proportion d'électeurs autochtones, pour expliquer le taux de participation des électeurs autochtones du Québec et du reste du Canada.
 
 Pour aller plus loin, une analyse qui souhaiterait mobiliser la taille des circonscriptions devrait inclure les variables sociodémographiques puisque les circonscription qui ont proportion plus élevée d'électeurs autochtones se situent généralement en région éloignée. L'accès à l'information, la couverture médiatique des campagnes électorales ou encore le profil sociodémographiques des électeurs se distinguent généralement des circonscriptions métropolitaines.
+
+# Choix des outils
+L'utilisation de R a été un choix évident pour réaliser ce projet, et ce pour quatre raisons. La première est la popularité de l'outil dans communauté scientifique de science politique. Ce court projet nous aura permis de se familiariser et d'acquérir des habilités techniques pour faire de la recherche pour les prochaines années. La deuxième raison est l'accessibilité de l'outil: la présence dde logiciel d'Intelligence artificielle, d'une large communauté d'utilisateur et de sa gratuité diminue le coût d'acquisition bien plus faible étant donné que les problèmes rencontrés ont généralement été répertoriés par d'autres chercheurs et peuvent facilement être controurné avbec l'aide de l'IA. En plus, sa gratuité permet d'en faire un outil de choix puisqu'il n'est pas dit qu'un employeur futut souscrira à une license onéreuse d'un logiciel propriétaire concurrent. Enfin, la troisième raison pour laquelle cet outil a été utilisé est pour la transparence et la réplicabilité du processus, des valeurs qui émergent rapidement dans le domaine. Les codes qui nous ont permis de générer nos résultats sont accessibles à la communauté qui pourra le rouler elle-même assurer de la véracité de nos analyses. La dernière raison est la capacité de faire toutes les étapes de la recherche au sein du même outil. Ici, nous avons extraits des données, analyser et visualiser les données, ce qui est un avantage indéniable pour éviter les erreurs ou les pertes de temps liées transférer les données d'un logiciel à l'autre.
 
 # Bibliographie
 Armstrong, D. A., Alcantara, C., & Kennedy, J. (2023a). Exploring the effects of electorate size on indigenous voter turnout. Politics, Groups, and Identities, 11(1), 98‑107. https://doi.org/10.1080/21565503.2021.1926297
