--- a/projet_session/projet.Rmd
+++ b/projet_session/projet.Rmd
@@ -100,21 +100,25 @@ Nous avons fait le choix de faire deux visualisation avec les données que nous 
 df_long <- df_cln %>%
   pivot_longer(cols = -"Province/territoire", names_to = "Année", values_to = "Taux_participation")
 
+df_long_filtered <- df_long %>%
+  filter("Province/territoire" != "Sections de vote dans les réserves") %>%
+  filter(Année != "Moyenne cumulative(%)") %>%
+  mutate(Année = as.numeric(gsub("[^0-9]", "", Année)))
+
 **Graphique linéaire**
-ggplot(df_long, aes(x = Année, y = Taux_participation, group = `Province/territoire`, color = `Province/territoire`)) +
+ggplot(df_long_filtered, aes(x = Année, y = Taux_participation, group = "Province/territoire", color = "Province/territoire")) +
   geom_line() +
   geom_point() +
   theme_minimal() +
   labs(
-    title = "Taux de participation aux élections fédérales dans les communautés autochtones par province (2004-2011)",
+    title = str_wrap("Taux de participation aux élections fédérales dans les communautés autochtones par province (2004-2011)"),
     x = "Année", y = "Taux de participation (%)",
     color = "Province"
   ) +
   theme(
     axis.text.x = element_text(angle = 45, hjust = 1),
     legend.position = "right"
-  ) +
-  scale_color_manual(values = couleurs)
+  )
   
 ![Graphique 1](C:\Users\willi\OneDrive\Images\tx_part_elec_fed_comm_aut_prov_lin.png)
   
